config style prime and tailwind

--- a/vue/index.html
+++ b/vue/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>Application E-Comerce</title>
+    <link href="./node_modules/lineicons/assets/icon-fonts/lineicons.css" rel="stylesheet" />
   </head>
   <body>
     <div id="app"></div>
